fix: background overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -81,6 +81,8 @@ canvas {
 }
 
 canvas {
+  max-width: 100%;
+  max-height: 100%;
   opacity: 0;
   animation: fadeIn 600ms ease-out forwards;
   will-change: opacity;
